# kdepim

./: .emacs-dirvars  .reviewboardrc  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  ConfigureChecks.cmake  GRANTLEE_PORT_GSOC  KDEPIMNightly.cmake  LAST_ENTERPRISE_SYNC  MAINTAINERS  MIGRATE-CONFIG-APPS  Mainpage.dox  Makefile.am  Makefile.am.in  NewsLog.txt  README  README.Kolab  README.libical  README.packagers  ReleaseNotes  SPLIT-APPS-STATUS  availlist.py  config-enterprise.h.cmake  config-kdepim.h.cmake  config.h.bot  config.h.cmake  configure.in  configure.in.in  configure.in.mid  createtag.sh  cvs.sh.diff  dependency-graph.dot  fieldnames  files  kab-fieldnames.html  kdepim-compat.h  kdepim-version.h  kdepim-version.h.cmake  kdepim.categories  kdepim.lsm  (+7 more)
ab_test/: AddressBook.cpp  Entry.cpp  Enum.cpp  Field.cpp  Makefile.am  README  Value.cpp  ab_test.cpp  test.cpp  vcard1
abbrowser/: Makefile.am  abbrowser.cpp  abbrowser.desktop  abbrowser.h  abbrowserapp.cpp  abbrowserapp.h  abbrowseriface.h  attributes.cpp  attributes.h  browserentryeditor.cpp  browserentryeditor.h  browserwidget.cpp  browserwidget.h  contactentry.cpp  contactentry.h  contactentrylist.cpp  datepickerdialog.cpp  datepickerdialog.h  entry.cpp  entry.h  entryeditorwidget.cpp  entryeditorwidget.h  main.cpp  namevaluewidget.cpp  namevaluewidget.h  selectfields.cpp  selectfields.h  undo.cpp  undo.h  viewoptions.cpp  viewoptions.h
accountwizard/: CMakeLists.txt  TODO  accountwizard.categories  accountwizard_debug.cpp  accountwizard_debug.h  configfile.cpp  configfile.h  dialog.cpp  dialog.h  dynamicpage.cpp  dynamicpage.h  global.cpp  identity.cpp  identity.h  inprocess-main.h  ldap.cpp  ldap.h  loadpage.cpp  loadpage.h  main.cpp  org.kde.accountwizard.desktop  page.cpp  page.h  personaldatapage.cpp  personaldatapage.h  providerpage.cpp  providerpage.h  resource.cpp  resource.h  servertest.cpp  servertest.h  setupautoconfigkolabfreebusy.cpp  setupautoconfigkolabfreebusy.h  setupautoconfigkolabldap.cpp  setupautoconfigkolabldap.h  setupautoconfigkolabmail.cpp  setupautoconfigkolabmail.h  setupispdb.cpp  setupispdb.h  setupmanager.cpp  (+7 more)
agents/: CMakeLists.txt  folderarchiveagent.desktop
akonadi_next/: CMakeLists.txt  Mainpage.dox  akonadinext_debug.cpp  akonadinext_debug.h  amazingcompleter.cpp  amazingcompleter.h  amazingdelegate.cpp  amazingdelegate.h  checkableitemproxymodel.cpp  checkableitemproxymodel.h  clientsideentitystorage.cpp  clientsideentitystorage.h  clientsideentitystorage_p.cpp  clientsideentitystorage_p.h  collectionfilterproxymodel.cpp  collectionselectionproxymodel.h  descendantentitiesmodel.cpp  descendantentitiesmodel.h  descendantentitiesmodel_p.cpp  descendantentitiesmodel_p.h  descendantentitiesproxymodel.cpp  entityfilterproxymodel.cpp  entityfilterproxymodel.h  entitymodelstatesaver.h  entityorderproxymodel.cpp  entityorderproxymodel.h  entityrightsfiltermodel.h  entitytreemodel.cpp  entitytreemodel.h  entitytreemodel_p.cpp  entitytreemodel_p.h  entitytreeview.cpp  entitytreeview.h  entityupdateadapter.cpp  entityupdateadapter.h  etmstatesaver.cpp  etmstatesaver.h  etmviewstatesaver.cpp  etmviewstatesaver.h  incidenceattachmentmodel.cpp  (+24 more)
akonadiconsole/: CMakeLists.txt  agentconfigdialog.cpp  agentconfigdialog.h  agentconfigdialog.ui  agentconfigmodel.cpp  agentconfigmodel.h  agentwidget.cpp  agentwidget.h  agentwidget.ui  akonadibrowsermodel.cpp  akonadibrowsermodel.h  akonadiconsole.categories  akonadiconsole.desktop  akonadiconsole.kcfg  akonadiconsole.qrc  akonadiconsole_debug.cpp  akonadiconsole_debug.h  akonadiconsoleui.rc  browserwidget.cpp  browserwidget.h  browserwidget_contentview-45.ui  browserwidget_contentview.ui  browserwidget_itemview.ui  collectionaclpage.cpp  collectionaclpage.h  collectionattributespage.cpp  collectionattributespage.h  collectionattributespage.ui  collectioninternalspage.cpp  collectioninternalspage.h  collectioninternalspage.ui  connectionpage.cpp  connectionpage.h  dbaccess.cpp  dbaccess.h  dbbrowser.cpp  dbbrowser.h  dbbrowser.ui  dbconsole.cpp  dbconsole.h  (+41 more)
akonadicontrol/: CMakeLists.txt  Resources.h  adaptor.cpp  akonadicontrol.cpp  akonadicontrol.h  foo.cpp  foo.xmi  main.cpp
archivemailagent/: CMakeLists.txt  Messages.sh  TODO  addarchivemaildialog.cpp  addarchivemaildialog.h  akonadi_archivemail_agent.notifyrc  archivejob.cpp  archivejob.h  archivemailagent.cpp  archivemailagent.desktop  archivemailagent.h  archivemailagentutil.cpp  archivemailagentutil.h  archivemaildialog.cpp  archivemaildialog.h  archivemailinfo.cpp  archivemailinfo.h  archivemailkernel.cpp  archivemailkernel.h  archivemailmanager.cpp  archivemailmanager.h  archivemailwidget.cpp  archivemailwidget.h  org.freedesktop.Akonadi.ArchiveMailAgent.xml
backupmail/: CMakeLists.txt  Messages.sh  TODO  abstractdata.cpp  abstractdata.h  abstractimportexportjob.cpp  abstractimportexportjob.h  akonadidatabase.cpp  akonadidatabase.h  archivestorage.h  backup-structure.txt  backupdata.cpp  backupdata.h  backupmail.desktop  backupmail.rc  backupmailapplication.cpp  backupmailapplication.h  backupmailapplication.rc  backupmailkernel.cpp  backupmailkernel.h  backupmailutil.cpp  backupmailutil.h  backupmailwidget.cpp  backupmailwidget.h  backupmailwindow.cpp  backupmailwindow.h  backupthread.cpp  backupthread.h  exportcalendarjob.cpp  exportcalendarjob.h  exportmailjob.cpp  exportmailjob.h  importcalendarjob.cpp  importcalendarjob.h  importmailjob.cpp  importmailjob.h  main.cpp  restoredata.cpp  restoredata.h  selectiontypedialog.cpp  (+4 more)
blogilo/: AUTHORS  CHANGELOG  CMakeLists.txt  Mainpage.dox  Messages.sh  README  blogilo-separate.cmake  blogilo.appdata.xml  blogilo.categories  blogilo.desktop  org.kde.blogilo.appdata.xml  org.kde.blogilo.desktop
calendarsupport/: .krazy  CMakeLists.txt  KF5CalendarSupportConfig.cmake.in  Mainpage.dox  Messages.sh  akonadicalendar.cpp  akonadicalendar.h  akonadicalendar_p.h  archivedialog.cpp  archivedialog.h  attachmenthandler.cpp  attachmenthandler.h  attributeregistrar.cpp  blockalarmsattribute.cpp  blockalarmsattribute.h  calendar.cpp  (+100 more)
(+24315 files in other folders)
